w32: Don't convert slash->backslash when it's under Wine.

* src/sysutils.c (_gpgrt_fname_to_wchar): No change under Wine.

--

GnuPG-bug-id: 7138
Signed-off-by: NIIBE Yutaka <gniibe@fsij.org>